--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -498,11 +498,11 @@ video {
 .z-50{
   z-index: 50;
 }
-.col-span-2{
-  grid-column: span 2 / span 2;
-}
 .col-span-1{
   grid-column: span 1 / span 1;
+}
+.col-span-2{
+  grid-column: span 2 / span 2;
 }
 .col-span-7{
   grid-column: span 7 / span 7;
@@ -573,14 +573,20 @@ video {
 .ml-auto{
   margin-left: auto;
 }
+.mt-auto{
+  margin-top: auto;
+}
+.mr-4{
+  margin-right: 1rem;
+}
+.mb-4{
+  margin-bottom: 1rem;
+}
 .mt-4{
   margin-top: 1rem;
 }
 .mt-5{
   margin-top: 1.25rem;
-}
-.mb-4{
-  margin-bottom: 1rem;
 }
 .mb-6{
   margin-bottom: 1.5rem;
@@ -591,20 +597,11 @@ video {
 .mt-6{
   margin-top: 1.5rem;
 }
-.mt-auto{
-  margin-top: auto;
-}
-.mr-4{
-  margin-right: 1rem;
-}
 .mt-2{
   margin-top: 0.5rem;
 }
 .ml-2{
   margin-left: 0.5rem;
-}
-.mt-10{
-  margin-top: 2.5rem;
 }
 .block{
   display: block;
@@ -633,6 +630,9 @@ video {
 .h-1{
   height: 0.25rem;
 }
+.h-10{
+  height: 2.5rem;
+}
 .h-56{
   height: 14rem;
 }
@@ -642,17 +642,11 @@ video {
 .h-96{
   height: 24rem;
 }
-.h-10{
-  height: 2.5rem;
-}
 .h-0{
   height: 0px;
 }
 .h-6{
   height: 1.5rem;
-}
-.h-12{
-  height: 3rem;
 }
 .w-10{
   width: 2.5rem;
@@ -663,17 +657,17 @@ video {
 .w-full{
   width: 100%;
 }
-.w-auto{
-  width: auto;
-}
-.w-80{
-  width: 20rem;
-}
 .w-60{
   width: 15rem;
 }
 .w-64{
   width: 16rem;
+}
+.w-auto{
+  width: auto;
+}
+.w-80{
+  width: 20rem;
 }
 .max-w-2xl{
   max-width: 42rem;
@@ -806,14 +800,14 @@ video {
 .border{
   border-width: 1px;
 }
+.border-r-2{
+  border-right-width: 2px;
+}
 .border-b-4{
   border-bottom-width: 4px;
 }
 .border-t-4{
   border-top-width: 4px;
-}
-.border-r-2{
-  border-right-width: 2px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -828,10 +822,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(96 170 169 / var(--tw-border-opacity));
 }
-.border-Mossco-grey-dark{
-  --tw-border-opacity: 1;
-  border-color: rgb(62 63 68 / var(--tw-border-opacity));
-}
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -840,9 +830,9 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(33 33 33 / var(--tw-border-opacity));
 }
-.bg-Mossco-grey-background{
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+.border-Mossco-grey-dark{
+  --tw-border-opacity: 1;
+  border-color: rgb(62 63 68 / var(--tw-border-opacity));
 }
 .bg-primary-NORMAL{
   --tw-bg-opacity: 1;
@@ -851,6 +841,10 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-Mossco-grey-background{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
 }
 .bg-Mossco-grey-dark{
   --tw-bg-opacity: 1;
@@ -863,23 +857,26 @@ video {
 .bg-opacity-60{
   --tw-bg-opacity: 0.6;
 }
-.bg-opacity-95{
-  --tw-bg-opacity: 0.95;
+.bg-opacity-90{
+  --tw-bg-opacity: 0.9;
 }
 .bg-opacity-0{
   --tw-bg-opacity: 0;
 }
-.bg-opacity-20{
-  --tw-bg-opacity: 0.2;
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
 }
 .bg-opacity-75{
   --tw-bg-opacity: 0.75;
 }
+.bg-opacity-95{
+  --tw-bg-opacity: 0.95;
+}
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
 }
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
+.bg-opacity-20{
+  --tw-bg-opacity: 0.2;
 }
 .bg-cover{
   background-size: cover;
@@ -922,17 +919,21 @@ video {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
-}
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 .py-20{
   padding-top: 5rem;
@@ -962,28 +963,30 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.pl-4{
-  padding-left: 1rem;
-}
-.pb-4{
-  padding-bottom: 1rem;
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 .pb-8{
   padding-bottom: 2rem;
 }
+.pr-4{
+  padding-right: 1rem;
+}
+.pb-4{
+  padding-bottom: 1rem;
+}
+.pt-8{
+  padding-top: 2rem;
+}
+.pt-6{
+  padding-top: 1.5rem;
+}
 .pt-16{
   padding-top: 4rem;
-}
-.pb-6{
-  padding-bottom: 1.5rem;
 }
 .pt-10{
   padding-top: 2.5rem;
@@ -991,17 +994,11 @@ video {
 .pt-2{
   padding-top: 0.5rem;
 }
-.pb-7{
-  padding-bottom: 1.75rem;
-}
 .pl-2{
   padding-left: 0.5rem;
 }
 .pt-0{
   padding-top: 0px;
-}
-.pt-6{
-  padding-top: 1.5rem;
 }
 .pl-1\.5{
   padding-left: 0.375rem;
@@ -1012,11 +1009,8 @@ video {
 .pt-3{
   padding-top: 0.75rem;
 }
-.pr-4{
-  padding-right: 1rem;
-}
-.pt-8{
-  padding-top: 2rem;
+.pl-4{
+  padding-left: 1rem;
 }
 .pb-16{
   padding-bottom: 4rem;
@@ -1024,8 +1018,8 @@ video {
 .pb-3{
   padding-bottom: 0.75rem;
 }
-.pb-12{
-  padding-bottom: 3rem;
+.pb-7{
+  padding-bottom: 1.75rem;
 }
 .pl-1{
   padding-left: 0.25rem;
@@ -1041,6 +1035,10 @@ video {
 }
 .font-serif{
   font-family: 'Montserrat';
+}
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .text-4xl{
   font-size: 2.25rem;
@@ -1062,10 +1060,6 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -1073,14 +1067,14 @@ video {
 .font-light{
   font-weight: 300;
 }
-.font-normal{
-  font-weight: 400;
-}
 .font-medium{
   font-weight: 500;
 }
 .font-bold{
   font-weight: 700;
+}
+.font-normal{
+  font-weight: 400;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1105,6 +1099,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
 .text-primary-NORMAL{
   --tw-text-opacity: 1;
   color: rgb(96 170 169 / var(--tw-text-opacity));
@@ -1113,25 +1111,21 @@ video {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
-.text-gray-800{
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-gray-500{
+.text-Mossco-grey-semi{
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(195 195 195 / var(--tw-text-opacity));
 }
 .text-Mossco-grey-background{
   --tw-text-opacity: 1;
   color: rgb(33 33 33 / var(--tw-text-opacity));
 }
-.text-Mossco-grey-semi{
+.text-gray-800{
   --tw-text-opacity: 1;
-  color: rgb(195 195 195 / var(--tw-text-opacity));
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .opacity-60{
   opacity: 0.6;
@@ -1213,6 +1207,10 @@ body, html {
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:text-blue-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 .hover\:text-primary-LIGHT:hover{
   --tw-text-opacity: 1;
@@ -1328,10 +1326,6 @@ body, html {
     margin-bottom: 1.5rem;
   }.md\:mt-4{
     margin-top: 1rem;
-  }.md\:mt-9{
-    margin-top: 2.25rem;
-  }.md\:mt-0{
-    margin-top: 0px;
   }.md\:inline-block{
     display: inline-block;
   }.md\:flex{
@@ -1389,6 +1383,12 @@ body, html {
   }.md\:py-8{
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }.md\:pb-0{
+    padding-bottom: 0px;
+  }.md\:pb-2{
+    padding-bottom: 0.5rem;
+  }.md\:pt-0{
+    padding-top: 0px;
   }.md\:pt-20{
     padding-top: 5rem;
   }.md\:pb-4{
@@ -1407,12 +1407,6 @@ body, html {
     padding-top: 3rem;
   }.md\:pt-8{
     padding-top: 2rem;
-  }.md\:pb-0{
-    padding-bottom: 0px;
-  }.md\:pb-2{
-    padding-bottom: 0.5rem;
-  }.md\:pt-0{
-    padding-top: 0px;
   }.md\:text-left{
     text-align: left;
   }.md\:text-6xl{
@@ -1427,6 +1421,9 @@ body, html {
   }.md\:text-gray-200{
     --tw-text-opacity: 1;
     color: rgb(229 231 235 / var(--tw-text-opacity));
+  }.md\:hover\:text-primary-LIGHT:hover{
+    --tw-text-opacity: 1;
+    color: rgb(136 191 190 / var(--tw-text-opacity));
   }
 }
 @media (min-width: 1024px){.lg\:top-2{
@@ -1435,8 +1432,6 @@ body, html {
     grid-column: span 2 / span 2;
   }.lg\:mb-10{
     margin-bottom: 2.5rem;
-  }.lg\:mt-9{
-    margin-top: 2.25rem;
   }.lg\:flex{
     display: flex;
   }.lg\:hidden{
