--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -603,6 +603,9 @@ video {
 .ml-2{
   margin-left: 0.5rem;
 }
+.mt-10{
+  margin-top: 2.5rem;
+}
 .block{
   display: block;
 }
@@ -1021,6 +1024,9 @@ video {
 .pb-7{
   padding-bottom: 1.75rem;
 }
+.pb-12{
+  padding-bottom: 3rem;
+}
 .pl-1{
   padding-left: 0.25rem;
 }
@@ -1326,6 +1332,10 @@ body, html {
     margin-bottom: 1.5rem;
   }.md\:mt-4{
     margin-top: 1rem;
+  }.md\:mt-9{
+    margin-top: 2.25rem;
+  }.md\:mt-0{
+    margin-top: 0px;
   }.md\:inline-block{
     display: inline-block;
   }.md\:flex{
@@ -1432,6 +1442,8 @@ body, html {
     grid-column: span 2 / span 2;
   }.lg\:mb-10{
     margin-bottom: 2.5rem;
+  }.lg\:mt-9{
+    margin-top: 2.25rem;
   }.lg\:flex{
     display: flex;
   }.lg\:hidden{
