--- a/tailwind_theme/tailwind_for_wp_editor.css
+++ b/tailwind_theme/tailwind_for_wp_editor.css
@@ -188,6 +188,9 @@ html {
 .ml-2{
   margin-left: 0.5rem;
 }
+.mt-10{
+  margin-top: 2.5rem;
+}
 .block{
   display: block;
 }
@@ -606,6 +609,9 @@ html {
 .pb-7{
   padding-bottom: 1.75rem;
 }
+.pb-12{
+  padding-bottom: 3rem;
+}
 .pl-1{
   padding-left: 0.25rem;
 }
@@ -911,6 +917,10 @@ body, html {
     margin-bottom: 1.5rem;
   }.md\:mt-4{
     margin-top: 1rem;
+  }.md\:mt-9{
+    margin-top: 2.25rem;
+  }.md\:mt-0{
+    margin-top: 0px;
   }.md\:inline-block{
     display: inline-block;
   }.md\:flex{
@@ -1017,6 +1027,8 @@ body, html {
     grid-column: span 2 / span 2;
   }.lg\:mb-10{
     margin-bottom: 2.5rem;
+  }.lg\:mt-9{
+    margin-top: 2.25rem;
   }.lg\:flex{
     display: flex;
   }.lg\:hidden{
