--- a/custom.css
+++ b/custom.css
@@ -313,7 +313,17 @@
   background-repeat: no-repeat;
   -webkit-box-shadow: inset 0 0 0 2000px rgba(33, 33, 33, 0.56);
           box-shadow: inset 0 0 0 2000px rgba(33, 33, 33, 0.56);
-  height: 25vh;
+  height: 40vh;
+}
+
+.menus-header {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  width: 100%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 #cafe-banner {
@@ -322,7 +332,6 @@
 
 @media (max-width: 47.9375em) {
   #cafe-banner {
-    height: 15vh;
   }
 }
 .cafe-menu-bg {
@@ -339,7 +348,6 @@
 
 @media (max-width: 47.9375em) {
   #day-banner {
-    height: 15vh;
   }
 }
 .day-menu-bg {
@@ -355,7 +363,6 @@
 
 @media (max-width: 47.9375em) {
   #day-banner {
-    height: 15vh;
   }
 }
 .evening-menu-bg {
