--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -537,14 +537,6 @@ video {
   margin-top: 0.625rem;
   margin-bottom: 0.625rem;
 }
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
-}
 .mx-4{
   margin-left: 1rem;
   margin-right: 1rem;
@@ -557,9 +549,17 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.my-auto{
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .mx-10{
   margin-left: 2.5rem;
   margin-right: 2.5rem;
+}
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .-mt-28{
   margin-top: -7rem;
@@ -573,12 +573,6 @@ video {
 .ml-auto{
   margin-left: auto;
 }
-.mt-10{
-  margin-top: 2.5rem;
-}
-.ml-2{
-  margin-left: 0.5rem;
-}
 .mt-auto{
   margin-top: auto;
 }
@@ -588,23 +582,29 @@ video {
 .mb-4{
   margin-bottom: 1rem;
 }
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-.mt-2{
-  margin-top: 0.5rem;
-}
 .mt-4{
   margin-top: 1rem;
 }
 .mt-5{
   margin-top: 1.25rem;
 }
+.mb-6{
+  margin-bottom: 1.5rem;
+}
 .mb-12{
   margin-bottom: 3rem;
 }
 .mt-6{
   margin-top: 1.5rem;
+}
+.mt-2{
+  margin-top: 0.5rem;
+}
+.ml-2{
+  margin-left: 0.5rem;
+}
+.mt-10{
+  margin-top: 2.5rem;
 }
 .block{
   display: block;
@@ -633,23 +633,23 @@ video {
 .h-1{
   height: 0.25rem;
 }
-.h-0{
-  height: 0px;
-}
-.h-full{
-  height: 100%;
-}
-.h-6{
-  height: 1.5rem;
-}
 .h-10{
   height: 2.5rem;
 }
 .h-56{
   height: 14rem;
 }
+.h-full{
+  height: 100%;
+}
 .h-96{
   height: 24rem;
+}
+.h-0{
+  height: 0px;
+}
+.h-6{
+  height: 1.5rem;
 }
 .w-10{
   width: 2.5rem;
@@ -684,12 +684,12 @@ video {
 .origin-top{
   transform-origin: top;
 }
-.translate-y-12{
-  --tw-translate-y: 3rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .-translate-y-4{
   --tw-translate-y: -1rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-12{
+  --tw-translate-y: 3rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-125{
@@ -702,12 +702,12 @@ video {
   --tw-scale-y: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.scale-y-50{
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .scale-y-75{
   --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-y-50{
+  --tw-scale-y: .5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform{
@@ -792,14 +792,14 @@ video {
 .rounded{
   border-radius: 0.25rem;
 }
+.rounded-sm{
+  border-radius: 0.125rem;
+}
 .rounded-xl{
   border-radius: 0.75rem;
 }
 .rounded-md{
   border-radius: 0.375rem;
-}
-.rounded-sm{
-  border-radius: 0.125rem;
 }
 .border-2{
   border-width: 2px;
@@ -807,8 +807,14 @@ video {
 .border{
   border-width: 1px;
 }
+.border-r-2{
+  border-right-width: 2px;
+}
 .border-b-4{
   border-bottom-width: 4px;
+}
+.border-t-4{
+  border-top-width: 4px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -816,18 +822,16 @@ video {
 .border-r-4{
   border-right-width: 4px;
 }
-.border-t-4{
-  border-top-width: 4px;
-}
-.border-r-2{
-  border-right-width: 2px;
-}
 .border-solid{
   border-style: solid;
 }
 .border-primary-NORMAL{
   --tw-border-opacity: 1;
   border-color: rgb(96 170 169 / var(--tw-border-opacity));
+}
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 .border-Mossco-grey-background{
   --tw-border-opacity: 1;
@@ -837,14 +841,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(62 63 68 / var(--tw-border-opacity));
 }
-.border-gray-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.bg-Mossco-grey-background{
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
-}
 .bg-primary-NORMAL{
   --tw-bg-opacity: 1;
   background-color: rgb(96 170 169 / var(--tw-bg-opacity));
@@ -853,6 +849,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-Mossco-grey-background{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+}
 .bg-Mossco-grey-dark{
   --tw-bg-opacity: 1;
   background-color: rgb(62 63 68 / var(--tw-bg-opacity));
@@ -860,6 +860,18 @@ video {
 .bg-primary-LIGHT{
   --tw-bg-opacity: 1;
   background-color: rgb(136 191 190 / var(--tw-bg-opacity));
+}
+.bg-opacity-60{
+  --tw-bg-opacity: 0.6;
+}
+.bg-opacity-90{
+  --tw-bg-opacity: 0.9;
+}
+.bg-opacity-0{
+  --tw-bg-opacity: 0;
+}
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
 }
 .bg-opacity-75{
   --tw-bg-opacity: 0.75;
@@ -870,17 +882,29 @@ video {
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
 }
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
-}
-.bg-opacity-60{
-  --tw-bg-opacity: 0.6;
-}
-.bg-opacity-0{
-  --tw-bg-opacity: 0;
-}
 .bg-opacity-20{
   --tw-bg-opacity: 0.2;
+}
+.bg-opacity-5{
+  --tw-bg-opacity: 0.05;
+}
+.bg-opacity-10{
+  --tw-bg-opacity: 0.1;
+}
+.bg-opacity-30{
+  --tw-bg-opacity: 0.3;
+}
+.bg-opacity-40{
+  --tw-bg-opacity: 0.4;
+}
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
+}
+.bg-opacity-80{
+  --tw-bg-opacity: 0.8;
+}
+.bg-opacity-100{
+  --tw-bg-opacity: 1;
 }
 .bg-cover{
   background-size: cover;
@@ -894,11 +918,11 @@ video {
 .bg-no-repeat{
   background-repeat: no-repeat;
 }
-.fill-current{
-  fill: currentColor;
-}
 .fill-primary-NORMAL{
   fill: #60aaa9;
+}
+.fill-current{
+  fill: currentColor;
 }
 .object-cover{
   -o-object-fit: cover;
@@ -923,29 +947,21 @@ video {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.py-14{
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .py-20{
   padding-top: 5rem;
@@ -959,6 +975,10 @@ video {
   padding-top: 14rem;
   padding-bottom: 14rem;
 }
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -971,23 +991,15 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.pl-4{
-  padding-left: 1rem;
-}
-.pb-8{
-  padding-bottom: 2rem;
-}
-.pt-6{
+.py-6{
   padding-top: 1.5rem;
-}
-.pb-12{
-  padding-bottom: 3rem;
-}
-.pb-3{
-  padding-bottom: 0.75rem;
+  padding-bottom: 1.5rem;
 }
 .pb-6{
   padding-bottom: 1.5rem;
+}
+.pb-8{
+  padding-bottom: 2rem;
 }
 .pr-4{
   padding-right: 1rem;
@@ -998,11 +1010,8 @@ video {
 .pt-8{
   padding-top: 2rem;
 }
-.pb-2{
-  padding-bottom: 0.5rem;
-}
-.pb-16{
-  padding-bottom: 4rem;
+.pt-6{
+  padding-top: 1.5rem;
 }
 .pt-16{
   padding-top: 4rem;
@@ -1013,9 +1022,6 @@ video {
 .pt-2{
   padding-top: 0.5rem;
 }
-.pb-7{
-  padding-bottom: 1.75rem;
-}
 .pl-2{
   padding-left: 0.5rem;
 }
@@ -1025,8 +1031,26 @@ video {
 .pl-1\.5{
   padding-left: 0.375rem;
 }
+.pb-2{
+  padding-bottom: 0.5rem;
+}
 .pt-3{
   padding-top: 0.75rem;
+}
+.pl-4{
+  padding-left: 1rem;
+}
+.pb-16{
+  padding-bottom: 4rem;
+}
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+.pb-12{
+  padding-bottom: 3rem;
+}
+.pb-7{
+  padding-bottom: 1.75rem;
 }
 .pl-1{
   padding-left: 0.25rem;
@@ -1037,23 +1061,11 @@ video {
 .text-center{
   text-align: center;
 }
-.font-serif{
-  font-family: 'Montserrat';
-}
 .font-sans{
   font-family: 'Bauhaus';
 }
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.font-serif{
+  font-family: 'Montserrat';
 }
 .text-sm{
   font-size: 0.875rem;
@@ -1063,6 +1075,10 @@ video {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1071,17 +1087,25 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
 .font-light{
   font-weight: 300;
-}
-.font-normal{
-  font-weight: 400;
 }
 .font-medium{
   font-weight: 500;
 }
 .font-bold{
   font-weight: 700;
+}
+.font-normal{
+  font-weight: 400;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1095,10 +1119,6 @@ video {
 .leading-snug{
   line-height: 1.375;
 }
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
 .text-current{
   color: currentColor;
 }
@@ -1110,17 +1130,25 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
 .text-primary-NORMAL{
   --tw-text-opacity: 1;
   color: rgb(96 170 169 / var(--tw-text-opacity));
 }
+.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
 .text-Mossco-grey-semi{
   --tw-text-opacity: 1;
   color: rgb(195 195 195 / var(--tw-text-opacity));
-}
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .text-Mossco-grey-background{
   --tw-text-opacity: 1;
@@ -1129,10 +1157,6 @@ video {
 .text-gray-800{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 .opacity-60{
   opacity: 0.6;
@@ -1215,6 +1239,10 @@ body, html {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.hover\:text-blue-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
 .hover\:text-primary-LIGHT:hover{
   --tw-text-opacity: 1;
   color: rgb(136 191 190 / var(--tw-text-opacity));
@@ -1283,11 +1311,11 @@ body, html {
   }.sm\:py-5{
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
-  }.sm\:text-6xl{
-    font-size: 3.75rem;
-    line-height: 1;
   }.sm\:text-5xl{
     font-size: 3rem;
+    line-height: 1;
+  }.sm\:text-6xl{
+    font-size: 3.75rem;
     line-height: 1;
   }
 }
@@ -1303,9 +1331,6 @@ body, html {
     grid-row: span 1 / span 1;
   }.md\:m-3{
     margin: 0.75rem;
-  }.md\:my-0{
-    margin-top: 0px;
-    margin-bottom: 0px;
   }.md\:my-auto{
     margin-top: auto;
     margin-bottom: auto;
@@ -1315,34 +1340,37 @@ body, html {
   }.md\:mx-4{
     margin-left: 1rem;
     margin-right: 1rem;
+  }.md\:my-0{
+    margin-top: 0px;
+    margin-bottom: 0px;
   }.md\:mr-5{
     margin-right: 1.25rem;
   }.md\:mr-0{
     margin-right: 0px;
-  }.md\:mt-9{
-    margin-top: 2.25rem;
-  }.md\:mt-0{
-    margin-top: 0px;
-  }.md\:mb-6{
-    margin-bottom: 1.5rem;
-  }.md\:mt-4{
-    margin-top: 1rem;
   }.md\:mb-0{
     margin-bottom: 0px;
   }.md\:mr-2{
     margin-right: 0.5rem;
   }.md\:ml-2{
     margin-left: 0.5rem;
+  }.md\:mb-6{
+    margin-bottom: 1.5rem;
+  }.md\:mt-4{
+    margin-top: 1rem;
+  }.md\:mt-9{
+    margin-top: 2.25rem;
+  }.md\:mt-0{
+    margin-top: 0px;
   }.md\:inline-block{
     display: inline-block;
   }.md\:flex{
     display: flex;
   }.md\:hidden{
     display: none;
-  }.md\:h-1\/5{
-    height: 20%;
   }.md\:h-40{
     height: 10rem;
+  }.md\:h-1\/5{
+    height: 20%;
   }.md\:w-56{
     width: 14rem;
   }.md\:w-2\/3{
@@ -1367,10 +1395,10 @@ body, html {
     place-items: end;
   }.md\:justify-end{
     justify-content: flex-end;
-  }.md\:gap-10{
-    gap: 2.5rem;
   }.md\:gap-2{
     gap: 0.5rem;
+  }.md\:gap-10{
+    gap: 2.5rem;
   }.md\:space-x-6 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -1378,9 +1406,6 @@ body, html {
   }.md\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
-  }.md\:py-8{
-    padding-top: 2rem;
-    padding-bottom: 2rem;
   }.md\:py-16{
     padding-top: 4rem;
     padding-bottom: 4rem;
@@ -1390,6 +1415,9 @@ body, html {
   }.md\:py-6{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+  }.md\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }.md\:pb-0{
     padding-bottom: 0px;
   }.md\:pb-2{
@@ -1428,16 +1456,19 @@ body, html {
   }.md\:text-gray-200{
     --tw-text-opacity: 1;
     color: rgb(229 231 235 / var(--tw-text-opacity));
+  }.md\:hover\:text-primary-LIGHT:hover{
+    --tw-text-opacity: 1;
+    color: rgb(136 191 190 / var(--tw-text-opacity));
   }
 }
 @media (min-width: 1024px){.lg\:top-2{
     top: 0.5rem;
   }.lg\:col-span-2{
     grid-column: span 2 / span 2;
-  }.lg\:mt-9{
-    margin-top: 2.25rem;
   }.lg\:mb-10{
     margin-bottom: 2.5rem;
+  }.lg\:mt-9{
+    margin-top: 2.25rem;
   }.lg\:flex{
     display: flex;
   }.lg\:hidden{
@@ -1519,10 +1550,10 @@ body, html {
   }.xl\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
-  }.xl\:pr-2{
-    padding-right: 0.5rem;
   }.xl\:pb-14{
     padding-bottom: 3.5rem;
+  }.xl\:pr-2{
+    padding-right: 0.5rem;
   }.xl\:text-7xl{
     font-size: 4.5rem;
     line-height: 1;
@@ -1539,10 +1570,10 @@ body, html {
   }.\32xl\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }.\32xl\:pr-0{
-    padding-right: 0px;
   }.\32xl\:pb-12{
     padding-bottom: 3rem;
+  }.\32xl\:pr-0{
+    padding-right: 0px;
   }.\32xl\:font-serif{
     font-family: 'Montserrat';
   }.\32xl\:text-7xl{
