--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -885,27 +885,6 @@ video {
 .bg-opacity-20{
   --tw-bg-opacity: 0.2;
 }
-.bg-opacity-5{
-  --tw-bg-opacity: 0.05;
-}
-.bg-opacity-10{
-  --tw-bg-opacity: 0.1;
-}
-.bg-opacity-30{
-  --tw-bg-opacity: 0.3;
-}
-.bg-opacity-40{
-  --tw-bg-opacity: 0.4;
-}
-.bg-opacity-70{
-  --tw-bg-opacity: 0.7;
-}
-.bg-opacity-80{
-  --tw-bg-opacity: 0.8;
-}
-.bg-opacity-100{
-  --tw-bg-opacity: 1;
-}
 .bg-cover{
   background-size: cover;
 }
@@ -1106,6 +1085,21 @@ video {
 }
 .font-normal{
   font-weight: 400;
+}
+.font-thin{
+  font-weight: 100;
+}
+.font-extralight{
+  font-weight: 200;
+}
+.font-semibold{
+  font-weight: 600;
+}
+.font-extrabold{
+  font-weight: 800;
+}
+.font-black{
+  font-weight: 900;
 }
 .uppercase{
   text-transform: uppercase;
