--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -675,6 +675,71 @@ video {
 .max-w-2xl{
   max-width: 42rem;
 }
+.max-w-screen-xl{
+  max-width: 1280px;
+}
+.max-w-none{
+  max-width: none;
+}
+.max-w-0{
+  max-width: 0rem;
+}
+.max-w-xs{
+  max-width: 20rem;
+}
+.max-w-sm{
+  max-width: 24rem;
+}
+.max-w-md{
+  max-width: 28rem;
+}
+.max-w-lg{
+  max-width: 32rem;
+}
+.max-w-xl{
+  max-width: 36rem;
+}
+.max-w-3xl{
+  max-width: 48rem;
+}
+.max-w-4xl{
+  max-width: 56rem;
+}
+.max-w-5xl{
+  max-width: 64rem;
+}
+.max-w-6xl{
+  max-width: 72rem;
+}
+.max-w-7xl{
+  max-width: 80rem;
+}
+.max-w-full{
+  max-width: 100%;
+}
+.max-w-min{
+  max-width: -moz-min-content;
+  max-width: min-content;
+}
+.max-w-max{
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.max-w-prose{
+  max-width: 65ch;
+}
+.max-w-screen-sm{
+  max-width: 640px;
+}
+.max-w-screen-md{
+  max-width: 768px;
+}
+.max-w-screen-lg{
+  max-width: 1024px;
+}
+.max-w-screen-2xl{
+  max-width: 1536px;
+}
 .shrink-0{
   flex-shrink: 0;
 }
@@ -1221,48 +1286,6 @@ body, html {
 .hover\:bg-opacity-75:hover{
   --tw-bg-opacity: 0.75;
 }
-.hover\:bg-opacity-100:hover{
-  --tw-bg-opacity: 1;
-}
-.hover\:bg-opacity-0:hover{
-  --tw-bg-opacity: 0;
-}
-.hover\:bg-opacity-5:hover{
-  --tw-bg-opacity: 0.05;
-}
-.hover\:bg-opacity-10:hover{
-  --tw-bg-opacity: 0.1;
-}
-.hover\:bg-opacity-20:hover{
-  --tw-bg-opacity: 0.2;
-}
-.hover\:bg-opacity-25:hover{
-  --tw-bg-opacity: 0.25;
-}
-.hover\:bg-opacity-30:hover{
-  --tw-bg-opacity: 0.3;
-}
-.hover\:bg-opacity-40:hover{
-  --tw-bg-opacity: 0.4;
-}
-.hover\:bg-opacity-50:hover{
-  --tw-bg-opacity: 0.5;
-}
-.hover\:bg-opacity-60:hover{
-  --tw-bg-opacity: 0.6;
-}
-.hover\:bg-opacity-70:hover{
-  --tw-bg-opacity: 0.7;
-}
-.hover\:bg-opacity-80:hover{
-  --tw-bg-opacity: 0.8;
-}
-.hover\:bg-opacity-90:hover{
-  --tw-bg-opacity: 0.9;
-}
-.hover\:bg-opacity-95:hover{
-  --tw-bg-opacity: 0.95;
-}
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1582,6 +1605,10 @@ body, html {
     padding-right: 0.5rem;
   }.xl\:pb-14{
     padding-bottom: 3.5rem;
+  }.xl\:pr-14{
+    padding-right: 3.5rem;
+  }.xl\:pr-20{
+    padding-right: 5rem;
   }.xl\:text-7xl{
     font-size: 4.5rem;
     line-height: 1;
@@ -1590,6 +1617,8 @@ body, html {
 @media (min-width: 1536px){.\32xl\:mx-32{
     margin-left: 8rem;
     margin-right: 8rem;
+  }.\32xl\:max-w-screen-xl{
+    max-width: 1280px;
   }.\32xl\:justify-center{
     justify-content: center;
   }.\32xl\:bg-primary-NORMAL{
