--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -498,11 +498,11 @@ video {
 .z-50{
   z-index: 50;
 }
-.col-span-1{
-  grid-column: span 1 / span 1;
-}
 .col-span-2{
   grid-column: span 2 / span 2;
+}
+.col-span-1{
+  grid-column: span 1 / span 1;
 }
 .col-span-7{
   grid-column: span 7 / span 7;
@@ -573,20 +573,14 @@ video {
 .ml-auto{
   margin-left: auto;
 }
-.mt-auto{
-  margin-top: auto;
-}
-.mr-4{
-  margin-right: 1rem;
-}
-.mb-4{
-  margin-bottom: 1rem;
-}
 .mt-4{
   margin-top: 1rem;
 }
 .mt-5{
   margin-top: 1.25rem;
+}
+.mb-4{
+  margin-bottom: 1rem;
 }
 .mb-6{
   margin-bottom: 1.5rem;
@@ -596,6 +590,12 @@ video {
 }
 .mt-6{
   margin-top: 1.5rem;
+}
+.mt-auto{
+  margin-top: auto;
+}
+.mr-4{
+  margin-right: 1rem;
 }
 .mt-2{
   margin-top: 0.5rem;
@@ -633,9 +633,6 @@ video {
 .h-1{
   height: 0.25rem;
 }
-.h-10{
-  height: 2.5rem;
-}
 .h-56{
   height: 14rem;
 }
@@ -644,6 +641,9 @@ video {
 }
 .h-96{
   height: 24rem;
+}
+.h-10{
+  height: 2.5rem;
 }
 .h-0{
   height: 0px;
@@ -660,23 +660,23 @@ video {
 .w-full{
   width: 100%;
 }
-.w-60{
-  width: 15rem;
-}
-.w-64{
-  width: 16rem;
-}
 .w-auto{
   width: auto;
 }
 .w-80{
   width: 20rem;
 }
-.max-w-2xl{
-  max-width: 42rem;
+.w-60{
+  width: 15rem;
+}
+.w-64{
+  width: 16rem;
 }
 .max-w-screen-xl{
   max-width: 1280px;
+}
+.max-w-2xl{
+  max-width: 42rem;
 }
 .shrink-0{
   flex-shrink: 0;
@@ -789,6 +789,9 @@ video {
 .overflow-hidden{
   overflow: hidden;
 }
+.scroll-smooth{
+  scroll-behavior: smooth;
+}
 .rounded{
   border-radius: 0.25rem;
 }
@@ -807,14 +810,14 @@ video {
 .border{
   border-width: 1px;
 }
-.border-r-2{
-  border-right-width: 2px;
-}
 .border-b-4{
   border-bottom-width: 4px;
 }
 .border-t-4{
   border-top-width: 4px;
+}
+.border-r-2{
+  border-right-width: 2px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -829,6 +832,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(96 170 169 / var(--tw-border-opacity));
 }
+.border-Mossco-grey-dark{
+  --tw-border-opacity: 1;
+  border-color: rgb(62 63 68 / var(--tw-border-opacity));
+}
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -836,6 +843,10 @@ video {
 .border-Mossco-grey-background{
   --tw-border-opacity: 1;
   border-color: rgb(33 33 33 / var(--tw-border-opacity));
+}
+.bg-Mossco-grey-background{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
 }
 .bg-primary-NORMAL{
   --tw-bg-opacity: 1;
@@ -845,31 +856,31 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-Mossco-grey-background{
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
-}
 .bg-Mossco-grey-dark{
   --tw-bg-opacity: 1;
   background-color: rgb(62 63 68 / var(--tw-bg-opacity));
 }
-.bg-opacity-60{
-  --tw-bg-opacity: 0.6;
-}
-.bg-opacity-90{
-  --tw-bg-opacity: 0.9;
+.bg-primary-LIGHT{
+  --tw-bg-opacity: 1;
+  background-color: rgb(136 191 190 / var(--tw-bg-opacity));
 }
 .bg-opacity-0{
   --tw-bg-opacity: 0;
 }
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
-}
 .bg-opacity-95{
   --tw-bg-opacity: 0.95;
 }
+.bg-opacity-20{
+  --tw-bg-opacity: 0.2;
+}
+.bg-opacity-75{
+  --tw-bg-opacity: 0.75;
+}
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
+}
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
 }
 .bg-cover{
   background-size: cover;
@@ -912,21 +923,17 @@ video {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
+}
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .py-20{
   padding-top: 5rem;
@@ -956,27 +963,22 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.pb-6{
-  padding-bottom: 1.5rem;
-}
-.pb-8{
-  padding-bottom: 2rem;
-}
-.pr-4{
-  padding-right: 1rem;
+.pl-4{
+  padding-left: 1rem;
 }
 .pb-4{
   padding-bottom: 1rem;
 }
-.pt-8{
-  padding-top: 2rem;
-}
-.pt-6{
-  padding-top: 1.5rem;
+.pb-8{
+  padding-bottom: 2rem;
 }
 .pt-16{
   padding-top: 4rem;
@@ -987,11 +989,17 @@ video {
 .pt-2{
   padding-top: 0.5rem;
 }
+.pb-7{
+  padding-bottom: 1.75rem;
+}
 .pl-2{
   padding-left: 0.5rem;
 }
 .pt-0{
   padding-top: 0px;
+}
+.pt-6{
+  padding-top: 1.5rem;
 }
 .pl-1\.5{
   padding-left: 0.375rem;
@@ -1002,8 +1010,14 @@ video {
 .pt-3{
   padding-top: 0.75rem;
 }
-.pl-4{
-  padding-left: 1rem;
+.pb-6{
+  padding-bottom: 1.5rem;
+}
+.pr-4{
+  padding-right: 1rem;
+}
+.pt-8{
+  padding-top: 2rem;
 }
 .pb-16{
   padding-bottom: 4rem;
@@ -1029,10 +1043,6 @@ video {
 .font-serif{
   font-family: 'Montserrat';
 }
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -1053,6 +1063,10 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -1060,14 +1074,14 @@ video {
 .font-light{
   font-weight: 300;
 }
+.font-normal{
+  font-weight: 400;
+}
 .font-medium{
   font-weight: 500;
 }
 .font-bold{
   font-weight: 700;
-}
-.font-normal{
-  font-weight: 400;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1092,10 +1106,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
 .text-primary-NORMAL{
   --tw-text-opacity: 1;
   color: rgb(96 170 169 / var(--tw-text-opacity));
@@ -1104,17 +1114,25 @@ video {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
+.text-gray-800{
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-Mossco-grey-semi{
+.text-gray-500{
   --tw-text-opacity: 1;
-  color: rgb(195 195 195 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .text-Mossco-grey-background{
   --tw-text-opacity: 1;
   color: rgb(33 33 33 / var(--tw-text-opacity));
+}
+.text-Mossco-grey-semi{
+  --tw-text-opacity: 1;
+  color: rgb(195 195 195 / var(--tw-text-opacity));
 }
 .opacity-60{
   opacity: 0.6;
@@ -1129,12 +1147,16 @@ video {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.drop-shadow-xl{
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .drop-shadow{
   --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
-.drop-shadow-xl{
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+.drop-shadow-md{
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition{
@@ -1196,10 +1218,6 @@ body, html {
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.hover\:text-blue-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 .hover\:text-primary-LIGHT:hover{
   --tw-text-opacity: 1;
@@ -1376,12 +1394,6 @@ body, html {
   }.md\:py-8{
     padding-top: 2rem;
     padding-bottom: 2rem;
-  }.md\:pb-0{
-    padding-bottom: 0px;
-  }.md\:pb-2{
-    padding-bottom: 0.5rem;
-  }.md\:pt-0{
-    padding-top: 0px;
   }.md\:pt-20{
     padding-top: 5rem;
   }.md\:pb-4{
@@ -1398,6 +1410,14 @@ body, html {
     padding-bottom: 1.5rem;
   }.md\:pt-12{
     padding-top: 3rem;
+  }.md\:pt-8{
+    padding-top: 2rem;
+  }.md\:pb-0{
+    padding-bottom: 0px;
+  }.md\:pb-2{
+    padding-bottom: 0.5rem;
+  }.md\:pt-0{
+    padding-top: 0px;
   }.md\:text-left{
     text-align: left;
   }.md\:text-6xl{
@@ -1412,9 +1432,6 @@ body, html {
   }.md\:text-gray-200{
     --tw-text-opacity: 1;
     color: rgb(229 231 235 / var(--tw-text-opacity));
-  }.md\:hover\:text-primary-LIGHT:hover{
-    --tw-text-opacity: 1;
-    color: rgb(136 191 190 / var(--tw-text-opacity));
   }
 }
 @media (min-width: 1024px){.lg\:top-2{
@@ -1506,6 +1523,8 @@ body, html {
   }.xl\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+  }.xl\:pr-20{
+    padding-right: 5rem;
   }.xl\:pb-14{
     padding-bottom: 3.5rem;
   }.xl\:pr-2{
@@ -1518,6 +1537,8 @@ body, html {
 @media (min-width: 1536px){.\32xl\:mx-32{
     margin-left: 8rem;
     margin-right: 8rem;
+  }.\32xl\:max-w-screen-xl{
+    max-width: 1280px;
   }.\32xl\:justify-center{
     justify-content: center;
   }.\32xl\:bg-primary-NORMAL{
